WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
144381
REGRESSION(
r183467
): [SOUP] isMainResource is no longer passed as resource load parameters to the network process
https://bugs.webkit.org/show_bug.cgi?id=144381
Summary
REGRESSION(r183467): [SOUP] isMainResource is no longer passed as resource lo...
Carlos Garcia Campos
Reported
2015-04-29 02:55:38 PDT
A requester enum value is passed now as part of the ResourceRequest, but it's not encoded/decoded for soup.
Attachments
Patch
(2.13 KB, patch)
2015-04-29 02:57 PDT
,
Carlos Garcia Campos
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2015-04-29 02:57:34 PDT
Created
attachment 251940
[details]
Patch This fixes http/tests/cache/disk-cache/disk-cache-media.html when network cache is enabled.
Carlos Garcia Campos
Comment 2
2015-04-29 08:48:46 PDT
Committed
r183546
: <
http://trac.webkit.org/changeset/183546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug