REGRESSION(r183467): [SOUP] isMainResource is no longer passed as resource load parameters to the network process https://bugs.webkit.org/show_bug.cgi?id=144381

Reviewed by Darin Adler.

A requester enum value is passed now as part of the
ResourceRequest, but it's not encoded/decoded for soup.

* Shared/soup/WebCoreArgumentCodersSoup.cpp:
(IPC::ArgumentCoder<ResourceRequest>::encodePlatformData): Encode requester.
(IPC::ArgumentCoder<ResourceRequest>::decodePlatformData): Decode requester.

Canonical link: https://commits.webkit.org/162391@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183546 268f45cc-cd09-0410-ab3c-d52691b4dbfc